fixed spacing issue on a value

--- a/CSS/layout.css
+++ b/CSS/layout.css
@@ -16,13 +16,15 @@
   max-width: 960px;
   margin: 0 auto;
   padding: 0 20px;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+}
 
 .column,
 .columns {
   width: 100%;
   float: left;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+}
 
 /* For devices larger than 400px */
 
@@ -61,7 +63,7 @@
 
 /*General Layout Code from Original CSS File*/
 
-.containerTopMargin{
+.containerTopMargin {
   margin-top: 3em;
 }
 
